--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@prsm/duplex",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/src/index.js",
+  "main": "lib/index.js",
   "type": "module",
   "publishConfig": {
     "access": "public",
