--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "module": "es2022",
     "target": "esnext",
-    "outDir": "lib",
+    "outDir": "dist",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "declaration": true,
-    "declarationDir": "lib"
+    "declarationDir": "dist"
   }
 }
