--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "exports": {
     ".": {
-      "require": "./dist/index.cjs.js",
+      "require": "./dist/index.cjs",
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
